# Jatin-lean

./: .gitignore  BUILD_STATUS.md  CLI_IMPROVEMENTS.md  COMMIT_PLAN.md  Cargo.toml  DEVELOPER.md  DISTRIBUTION_GUIDE.md  DOCUMENTATION.md  FEATURE_1_INTERACTIVE_PROMPT.md  HOW_TO_USE.md  High-Performance System Optimization Projects.md  IMPLEMENTATION_PLAN.md  MULTI_PLATFORM_SETUP.md  NPM_SETUP_GUIDE.md  NPX_READY.md  PERFORMANCE_FIX.md  PERFORMANCE_UPDATE.md  PUBLISH_TO_NPM.md  PUBLISH_UPDATE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.6.md  ROADMAP_TO_EXCELLENCE.md  SETUP_COMPLETE.md  USER_GUIDE.md  build.rs  example-config.toml  push-to-github.sh  setup-multiplatform.sh  test-npm-package.sh
.github/workflows/: ci.yml  pr-check.yml  release.yml
.kiro/specs/jatin-lean-excellence-roadmap/: .config.kiro  design.md
npm/: .npmignore  README.md  index.d.ts  index.js  install.js  package.json
scripts/: build-all-platforms.sh  create_more_gssoc_issues.py  publish-crates-io.sh  test-npm-package.sh
src/: adaptive_engine.rs  ai_context.rs  allocator.rs  analytics.rs  benchmark.rs  bpf_verifier.rs  cache.rs  compress.rs  config.rs  cpu_cache.rs  dedup.rs  deleter.rs  display.rs  distributed_cache.rs  hardware_tuning.rs  health.rs  hedging.rs  io_uring.rs  lib.rs  lockfile.rs  maglev.rs  main.rs  memory_pool.rs  mmap.rs  mmap_ipc.rs  network.rs  node_bindings.rs  optimization.rs  output.rs  pcie_bottleneck.rs  plugin.rs  policy.rs  profiler.rs  request_coalescing.rs  ringbuffer.rs  rules.rs  scanner.rs  shared_memory_ipc.rs  simd.rs  snapshot.rs  (+8 more)
src/cli/: analyze.rs  bench.rs  legacy.rs  memory.rs  mod.rs  network.rs  node.rs  system.rs
tests/: cli_tests.rs  integration_test.rs
